crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-string-union_TC010_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC010_2.py:4:4: TC010 (runtime-string-union) Invalid string member in `X | Y`-style union type
  |
4 | x: "int" | str  # TC010
  |    ^^^^^ TC010 (runtime-string-union)
5 | x: ("int" | str) | "bool"  # TC010
  |

TC010_2.py:5:5: TC010 (runtime-string-union) Invalid string member in `X | Y`-style union type
  |
4 | x: "int" | str  # TC010
5 | x: ("int" | str) | "bool"  # TC010
  |     ^^^^^ TC010 (runtime-string-union)
  |

TC010_2.py:5:20: TC010 (runtime-string-union) Invalid string member in `X | Y`-style union type
  |
4 | x: "int" | str  # TC010
5 | x: ("int" | str) | "bool"  # TC010
  |                    ^^^^^^ TC010 (runtime-string-union)
  |

TC010_2.py:12:20: TC010 (runtime-string-union) Invalid string member in `X | Y`-style union type
   |
12 | z: list[str, str | "int"] = []  # TC010
   |                    ^^^^^ TC010 (runtime-string-union)
13 |
14 | type A = Value["int" | str]  # OK
   |

TC010_2.py:16:30: TC010 (runtime-string-union) Invalid string member in `X | Y`-style union type
   |
14 | type A = Value["int" | str]  # OK
15 |
16 | OldS = TypeVar('OldS', int | 'str', str)  # TC010
   |                              ^^^^^ TC010 (runtime-string-union)
   |
