crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__strict_typing-only-standard-library-import_kw_only.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
kw_only.py:5:45: TC003 (typing-only-standard-library-import) [*] Move standard library import `dataclasses.Field` into a type-checking block
  |
3 | from __future__ import annotations
4 |
5 | from dataclasses import KW_ONLY, dataclass, Field
  |                                             ^^^^^ TC003 (typing-only-standard-library-import)
  |
  = help: Move into type-checking block

ℹ Unsafe fix
2  2  | 
3  3  | from __future__ import annotations
4  4  | 
5     |-from dataclasses import KW_ONLY, dataclass, Field
   5  |+from dataclasses import KW_ONLY, dataclass
   6  |+from typing import TYPE_CHECKING
   7  |+
   8  |+if TYPE_CHECKING:
   9  |+    from dataclasses import Field
6  10 | 
7  11 | 
8  12 | @dataclass
