crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__tc010_precedence_over_tc008.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
<filename>:6:16: TC008 (quoted-type-alias) [*] Remove quotes from type alias
  |
4 | from typing import TypeAlias
5 |
6 | a: TypeAlias = 'int | None'  # TC008
  |                ^^^^^^^^^^^^ TC008 (quoted-type-alias)
7 | b: TypeAlias = 'int' | None  # TC010
  |
  = help: Remove quotes

ℹ Safe fix
3 3 | 
4 4 | from typing import TypeAlias
5 5 | 
6   |-a: TypeAlias = 'int | None'  # TC008
  6 |+a: TypeAlias = int | None  # TC008
7 7 | b: TypeAlias = 'int' | None  # TC010

<filename>:7:16: TC010 (runtime-string-union) Invalid string member in `X | Y`-style union type
  |
6 | a: TypeAlias = 'int | None'  # TC008
7 | b: TypeAlias = 'int' | None  # TC010
  |                ^^^^^ TC010 (runtime-string-union)
  |
