crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__type_checking_block_inline.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
<filename>:6:18: TC002 (typing-only-third-party-import) [*] Move third-party import `pandas` into a type-checking block
  |
4 | from typing import TYPE_CHECKING
5 |
6 | import pandas as pd
  |                  ^^ TC002 (typing-only-third-party-import)
7 |
8 | if TYPE_CHECKING: import os
  |
  = help: Move into type-checking block

ℹ Unsafe fix
3 3 | 
4 4 | from typing import TYPE_CHECKING
5 5 | 
6   |-import pandas as pd
7 6 | 
8   |-if TYPE_CHECKING: import os
  7 |+if TYPE_CHECKING: import pandas as pd; import os
9 8 | 
10 9 | def f(x: pd.DataFrame):
11 10 |     pass
